<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="305dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="307dp"
        android:layout_height="412dp"
        android:layout_marginBottom="71dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usd_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd" />

            <TextView
                android:id="@+id/usd_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gbp_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gbp" />

            <TextView
                android:id="@+id/gbp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/jpy_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpy" />

            <TextView
                android:id="@+id/jpy_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aud_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aud" />

            <TextView
                android:id="@+id/aud_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cad_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cad" />

            <TextView
                android:id="@+id/cad_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chf_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chf" />

            <TextView
                android:id="@+id/chf_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cny_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cny" />

            <TextView
                android:id="@+id/cny_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sek_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sek" />

            <TextView
                android:id="@+id/sek_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nzd_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nzd" />

            <TextView
                android:id="@+id/nzd_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/currency_value"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/eur"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/eur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eur_input"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="123dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="178dp"
            android:layout_height="40dp"
            android:hint="@string/eur_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
